# writeArrayInBinaryFileUsingCpp

./: CMakeLists.txt  setting.nn
src/: main.cc
src/read/: main.cc
src/reader/: main.cc
src/writer/: main.cc
